Remove thread lifecycle tests in lieu of loom